--- a/game.html
+++ b/game.html
@@ -32,6 +32,8 @@
 
     <!-- TODO add a Play Again button to select a new random country, 
         clear the user answer and result, so the user can have another go.  -->
+    <br>
+    <button id="play_again">Play Again</button>
         
 </div>
 </body>
